<resources>
    <string name="app_name">My Application</string>
    <string name="display">Enter a value</string>
    <string name="btnTwo">GO</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to my application!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed!"</string>
    <string name="login_button">LOG IN</string>
    <string name="registr_button">SIGN UP</string>
    <string name="login_label">WELCOME</string>
    <string name="registr_label">SIGN UP</string>
    <string name="login_edit_text">Enter login</string>
    <string name="password_edit_text">Enter password</string>
    <string name="password_one_more_time_edit_text">Enter password again</string>

    <!-- TODO: Remove or change this placeholder text -->
    //
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="title_activity_main3">MainActivity</string>
</resources>