<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="9">

    <TextView
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/kor"
        android:text="@string/registr_label"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:id="@+id/loginLabel">
    </TextView>
</LinearLayout>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="4">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="20sp"
        android:layout_margin="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/login_edit_text"
        android:textColor="@color/black"
        android:id="@+id/login"
        android:maxLength="25">
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:layout_weight="1"
        android:hint="@string/password_edit_text"
        android:inputType="textPassword"
        android:maxLength="10"
        android:textColor="@color/black"
        android:textSize="20sp"></EditText>

    <EditText
        android:id="@+id/passwordAccept"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:layout_weight="1"
        android:hint="@string/password_one_more_time_edit_text"
        android:inputType="textPassword"
        android:maxLength="10"
        android:textColor="@color/black"
        android:textSize="20sp"></EditText>
</LinearLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="8">
    <Button
        android:layout_marginBottom="90dp"
        android:layout_marginHorizontal="30dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/registr_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/logInButton"
        android:onClick="signUpBtn">
    </Button>
</LinearLayout>

</LinearLayout>



