<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <TextView
                android:layout_height="0dp"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/kor"
                android:text="@string/login_label"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:id="@+id/loginLabel">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_margin="50dp"
                android:inputType="textEmailAddress"
                android:hint="@string/login_edit_text"
                android:textColor="@color/black"
                android:id="@+id/login"
                android:maxLength="25">
            </EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_margin="50dp"
                android:hint="@string/password_edit_text"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:maxLength="10">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">
            <Button
                android:layout_marginBottom="140dp"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/registr_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/logInButton"
                android:onClick="signUpBtn">
            </Button>
            <Button

                android:layout_marginBottom="140dp"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/login_button"
                android:id="@+id/registrButton"
                android:onClick="logInBtn">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_google_button"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:gravity="center"></com.google.android.gms.common.SignInButton>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>